Update alignment of header elements to baseline in CSS

--- a/src/components/layout/Header/index.module.css
+++ b/src/components/layout/Header/index.module.css
@@ -19,7 +19,7 @@
 =============================================================================*/
 .left {
   display: flex;
-  align-items: center; /* теперь логотип и навигация по одной горизонтали */
+  align-items: baseline; /* теперь логотип и навигация по одной горизонтали */
   gap: 32px;
 }
 
