--- a/src/pages/movies/index.module.css
+++ b/src/pages/movies/index.module.css
@@ -371,7 +371,7 @@
   left: 50%;
   margin-left: -50vw;
   width: 100vw;
-  height: 625px; /* подкорректируй по макету */
+  height: 525px; /* подкорректируй по макету */
   pointer-events: none;
   z-index: 0;
 
@@ -380,7 +380,8 @@
       rgba(0, 0, 0, 0.8) 0%,
       rgba(0, 0, 0, 0) 70%
     ),
-    url("../../assets/images/backgrounds/showa-bg.jpg") center bottom / cover no-repeat;
-  filter: blur(60px) brightness(1);
+    url("../../assets/images/backgrounds/showa-bg.jpg") center bottom / cover
+      no-repeat;
+  filter: blur(60px) brightness(1.3);
   opacity: 0.6;
 }
