--- a/src/components/movies/Slider/index.module.css
+++ b/src/components/movies/Slider/index.module.css
@@ -180,3 +180,18 @@
 .slick-center {
   opacity: 1 !important;
 }
+
+/* если вы используете styles["rating-badge"] */
+.rating-badge {
+  display: inline-block;
+  padding: 2px 6px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  line-height: 1;
+  vertical-align: middle;
+  margin-left: 4px; /* чуть отступ от времени */
+}
