--- a/src/components/layout/Header/index.module.css
+++ b/src/components/layout/Header/index.module.css
@@ -100,6 +100,15 @@
   color: var(--color-primary);
 }
 
+.buttonLink {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  font: inherit;
+  color: inherit;
+}
+
 .quickBooking {
   font-size: 0.9rem;
   font-weight: 500;
