--- a/src/pages/login/index.module.css
+++ b/src/pages/login/index.module.css
@@ -31,7 +31,8 @@
   padding: 24px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
+  height: 30vh;
 }
 
 .auth-title {
