--- a/src/pages/movies/detail/index.module.css
+++ b/src/pages/movies/detail/index.module.css
@@ -165,8 +165,10 @@
   color: var(--color-dark);
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color var(--transition-speed),
-    color var(--transition-speed), border-color var(--transition-speed);
+  transition:
+    background-color var(--transition-speed),
+    color var(--transition-speed),
+    border-color var(--transition-speed);
 }
 
 .movie-detail-page__buy-button:hover,
@@ -398,9 +400,23 @@
   pointer-events: none;
   z-index: 1; /* меньше, чем у __container */
 
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, transparent 70%),
+  background:
+    linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, transparent 70%),
     var(--bg-image) center bottom / cover no-repeat;
 
   filter: blur(60px) brightness(1);
   opacity: 0.6;
+}
+@media (max-width: 600px) {
+  .movie-detail-page__gallery-item {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .movie-detail-page__showtimes {
+    position: static;
+    margin-top: 24px;
+  }
+  .showtimes-body {
+    width: 100%;
+  }
 }
