--- a/src/components/movies/ShowtimeNav/index.module.css
+++ b/src/components/movies/ShowtimeNav/index.module.css
@@ -211,7 +211,7 @@
   background: linear-gradient(
     to right,
     rgba(0, 0, 0, 0) 0%,
-    var(--color-dark) 90%
+   /* var(--color-dark) 90% */
   );
   z-index: 2;
 }
