--- a/src/components/movies/TrailerCarousel/index.module.css
+++ b/src/components/movies/TrailerCarousel/index.module.css
@@ -205,10 +205,62 @@
 /* ------------------------------------------------------------
    Адаптив под планшеты/мобилки
 ------------------------------------------------------------ */
-@media (max-width: var(--brk-md)) {
-  .carouselContainer {
-    height: 32rem; /* стало ≈512px, подгоните по вкусу */
-  }
+@media (max-width: 600px) {
+.trailerCarousel {
+  width: 100%;
+  max-width: var(--container-max);
+  margin: 0 auto;
+  margin-block-end: 0rem;
+  overflow: visible;
+  background: transparent;
+  filter: none;
+  opacity: 1;
+  margin-block-end: -5  rem;
+}
+
+/* ------------------------------------------------------------
+   Контейнер карусели: 100% от секции, ограничен шириной, центр
+   Увеличили высоту для большего контента
+------------------------------------------------------------ */
+.carouselContainer {
+  width: 100%;
+  max-width: var(--container-max);
+  margin: 0 auto;
+  border-radius: 1rem;
+  height: 18rem; /* было 30rem, стало 40rem (≈640px) */
+  overflow: hidden;
+}
+.customArrow {
+  all: unset;
+  position: absolute;
+  top: 18%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.321);
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: color var(--ease-fast), transform var(--ease-fast);
+  z-index: 100;
+}
+
+.customPrev {
+  left: 10px;
+}
+
+.customNext {
+  right:10px;
+}
+
+.customArrow:hover {
+  color: var(--clr-primary);
+  transform: translateY(-50%) scale(1.3);
+}
+
 }
 
 .ratingBadge {
@@ -223,4 +275,50 @@
   line-height: 1;
   vertical-align: middle;
   margin-left: 4px; /* чуть отступ от времени */
+}
+
+
+@media (max-width: 600px) {
+  .infoOverlay h2 {
+    margin: 0;
+    font-size: 0.7rem;
+    margin-left: 10px;
+  }
+  .infoOverlay p {
+    margin: 0.5rem 0;
+    font-size: 0.5rem;
+    max-width: 25ch;
+    margin-left: 10px;
+  }
+  .btnBuy {
+    display: inline-block;
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
+    background-color: rgb(255, 145, 0);
+    color: var(--clr-light-100);
+    border-radius: 0.5rem;
+    text-decoration: none;
+    font-size: 0.5rem;
+    margin-left: 10px;
+  }
+  .infoOverlay {
+    z-index: 10;      /* убедитесь, что оверлей поверх видео */
+    transform: none;  /* сбросьте смещение, если нужно */
+    bottom: 1rem;     /* подберите положение */
+    left: 1rem;
+    font-size: 0.5rem;
+  }
+  .ratingBadge {
+  display: inline-block;
+  padding: 2px 6px;
+  font-size: 0.5rem;
+  font-weight: 500;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  line-height: 1;
+  vertical-align: middle;
+  margin-left: 4px; /* чуть отступ от времени */
+}
 }
